Updates to Section 3.

--- a/answers.tex
+++ b/answers.tex
@@ -179,7 +179,7 @@ On the other hand, the authors do not aim to analyse the results with respect to
 With respect to style, the paper contains too many self-references and some captions in figures are too small.
 \end{review}
 
-\answer{\todo{}}
+\answer{We increased the caption of several figures, and revised the self-references on the text.}
 
 
 
